--- a/_config.yml
+++ b/_config.yml
@@ -11,18 +11,18 @@ github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: ""
-sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "Walking soul"
+sidebar-avatar: /img/avatar-m    # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
 # SNS settings
 RSS: false
 # weibo_username:     qiubaiying
-zhihu_username:     qiubaiying
-github_username:    qiubaiying
-facebook_username:  baiying.qiu.7
-jianshu_username:   e71990ada2fd
+zhihu_username:     wushukang
+github_username:    wuhsukang1996
+facebook_username:  wushukang1966
+jianshu_username:   f93ef802b033
 #twitter_username:   qiubaiying
 
 
