--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ sidebar-avatar: /img/avatar-m    # use absolute URL, seeing it's used in both `/
 RSS: false
 # weibo_username:     qiubaiying
 zhihu_username:     wushukang
-github_username:    wuhsukang1996
-facebook_username:  wushukang1966
+github_username:    wushukang1996
+facebook_username:  wushukang1996
 jianshu_username:   f93ef802b033
 #twitter_username:   qiubaiying
 
