--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ sidebar-avatar: /img/avatar-m    # use absolute URL, seeing it's used in both `/
 # SNS settings
 RSS: false
 # weibo_username:     qiubaiying
-zhihu_username:     people/zuo-zai-fen-tou-zhi-hui-gui-77/activities
+zhihu_username:    wushukang
 github_username:    wushukang1996
 facebook_username:  wushukang1996
 jianshu_username:   f93ef802b033
