--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "Walking soul"
-sidebar-avatar: /img/avatar_g.jpg    # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: https://ws3.sinaimg.cn/large/006tNc79gy1g1rx38klbej30k00k0n06.jpg   # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
